<resources>
    <string name="app_name">DinMvRx</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="information">Information</string>
    <string name="value">Value:</string>
    <string name="delivery_description">Delivery is free</string>
    <string name="price_format">%s usd</string>
    <string name="added_plus_one">added + 1</string>
</resources>