<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="false"
    android:fitsSystemWindows="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="?attr/actionBarSize"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:gravity="center"
            android:text="@string/menu"
            android:textColor="@android:color/black"
            app:drawableStartCompat="@drawable/ic_left_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingStart="@dimen/margin_normal"
            app:tabIndicatorHeight="0dp"
            app:tabMode="scrollable"
            app:tabRippleColor="@null"
            app:tabSelectedTextColor="@android:color/black"
            app:tabTextAppearance="@style/CustomTabText"
            app:tabTextColor="@color/neutral_400">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orders" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:paddingBottom="70dp"
            android:background="@color/neutral_100"
            app:layout_constraintBottom_toTopOf="@+id/tv_delivery_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_categories"
            tools:itemCount="4"
            tools:listitem="@layout/item_cart" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="-70dp"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/tv_delivery_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/tv_price"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/delivery_description"
                android:textColor="@color/neutral_400" />

            <TextView
                android:id="@+id/tv_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginBottom="8dp"
                android:text="@string/value" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/margin_normal"

                android:layout_toEndOf="@id/tv_price_label"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_large"
                android:singleLine="true"
                android:ellipsize="end"
                android:textStyle="bold"
                tools:text="171 usd" />

        </RelativeLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/view_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:src="@drawable/ic_credit_card_24"
        app:backgroundTint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>